# yolo-inference-demo

./: README.md
cpp-demo/linux-platform/: CMakeCache.txt  CMakeLists.txt  inference.cpp  inference.h  test_images.cpp  test_video.cpp
cpp-demo/linux-platform/data/: README.md
cpp-demo/windows-platform/onnxruntime-demo/: CMakeLists.txt  README.md  inference.cpp  inference.h  requirement.txt  usage_demo.cpp  utils.cpp  utils.h
cpp-demo/windows-platform/onnxruntime-demo/data/: classes.txt
cpp-demo/windows-platform/opencv-dnn-demo/: CMakeLists.txt  inference.cpp  inference.h  test_video.cpp
python-demo-yolov8/: usage.py
python-demo-yolov8/onnxinference/: __init__.py  inference.py
